Dependencies refactoring. Added decoder models. Added code for quick testing.

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -113,6 +113,13 @@
         "import torch\n",
         "from torch.utils.data import DataLoader\n",
         "\n",
+        "import torch.nn.functional as F\n",
+        "import torch.nn as nn\n",
+        "from typing import Optional, Callable\n",
+        "from tqdm.notebook import tqdm, trange\n",
+        "\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "import cv2\n",
         "\n",
         "device = 'cuda'\n",
         "vgg_weights_path = '/content/drive/My Drive/Speech2Face/Pretrained/vgg_face_dag.pth'\n",
@@ -148,10 +155,6 @@
       },
       "source": [
         "##################### DEPENDECIES ###########################\n",
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
-        "\n",
         "class Vgg_face_dag(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
@@ -256,6 +259,161 @@
         "        state_dict = torch.load(weights_path)\n",
         "        model.load_state_dict(state_dict)\n",
         "    return model\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DrYW-RmTyS9M",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "########################### DEPENDENCY - standard DECODER (w/o warping) ##########################\n",
+        "class Decoder(nn.Module):\n",
+        "    def __init__(self, n_hidden, bottom_width=4, channels=512):\n",
+        "        super().__init__()\n",
+        "        self.channels = channels\n",
+        "        self.bottom_width = bottom_width\n",
+        "\n",
+        "        self.linear = nn.Linear(n_hidden, bottom_width*bottom_width*channels)\n",
+        "        self.dconv1 = nn.ConvTranspose2d(channels, channels // 2, 4, 2, 1)\n",
+        "        self.dconv2 = nn.ConvTranspose2d(channels // 2, channels // 4, 4, 2, 1)\n",
+        "        self.dconv3 = nn.ConvTranspose2d(channels // 4, channels // 8, 4, 2, 1)\n",
+        "        self.dconv4 = nn.ConvTranspose2d(channels // 8, 3, 4, 2, 1)\n",
+        "\n",
+        "        self.bn0 = nn.BatchNorm1d(bottom_width*bottom_width*channels)\n",
+        "        self.bn1 = nn.BatchNorm2d(channels // 2)\n",
+        "        self.bn2 = nn.BatchNorm2d(channels // 4)\n",
+        "        self.bn3 = nn.BatchNorm2d(channels // 8)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        x = F.relu(self.bn0(self.linear(x))).view(-1, self.channels, self.bottom_width, self.bottom_width)\n",
+        "        x = F.relu(self.bn1(self.dconv1(x)))\n",
+        "        x = F.relu(self.bn2(self.dconv2(x)))\n",
+        "        x = F.relu(self.bn3(self.dconv3(x)))\n",
+        "\n",
+        "        x = torch.sigmoid(self.dconv4(x))\n",
+        "\n",
+        "        return x\n",
+        "\n",
+        "def decoder(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder/epoch_3_steps_12800.pth\", **kwargs):\n",
+        "    \"\"\"\n",
+        "    load imported model instance\n",
+        "    Args:\n",
+        "        weights_path (str): If set, loads model weights from the given path\n",
+        "    \"\"\"\n",
+        "    model = Decoder(4096)\n",
+        "    if weights_path:\n",
+        "        state_dict = torch.load(weights_path)[\"model_state_dict\"]\n",
+        "        model.load_state_dict(state_dict)\n",
+        "    return model"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7UhlsETN5_3B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "########################### DEPENDENCY - DECODER w/ warping ##########################\n",
+        "\n",
+        "class DECODER(nn.Module):\n",
+        "    def __init__(self, phase):\n",
+        "        super(DECODER, self).__init__()\n",
+        "        self.phase = phase\n",
+        "        self.fc3 = nn.Linear(4096, 1000)\n",
+        "        self.ReLU = nn.ReLU()\n",
+        "        #self.fc_bn3 = nn.BatchNorm1d(1000)\n",
+        "\n",
+        "\n",
+        "        self.fc4 = nn.Linear(1000, 14 * 14 * 256)\n",
+        "        self.fc_bn4 = nn.BatchNorm1d(14 * 14 * 256)\n",
+        "        def TransConv( i, kernal = 5, stride = 2, inp = None):\n",
+        "            if not inp:\n",
+        "                inp = max(256//2**(i-1), 32)\n",
+        "\n",
+        "            layer =  nn.Sequential(\n",
+        "                nn.ConvTranspose2d(inp, max(256//2**i, 32), \n",
+        "                                kernal, stride=stride, padding=2, output_padding=1, \n",
+        "                                dilation=1, padding_mode='zeros'),\n",
+        "                nn.ReLU(),\n",
+        "                nn.BatchNorm2d(max(256//2**i, 32)))\n",
+        "            return layer\n",
+        "        self.T1_ = TransConv(1, inp = 256)\n",
+        "        self.T2_ = TransConv(2)\n",
+        "        self.T3_ = TransConv(3)\n",
+        "        self.T4_ = TransConv(4)\n",
+        "    \n",
+        "        self.ConvLast = nn.Sequential(\n",
+        "            nn.Conv2d(32, 3, (1,1), stride=1),\n",
+        "            nn.BatchNorm2d(3),\n",
+        "            nn.ReLU())\n",
+        "\n",
+        "\n",
+        "        self.layerLandmark1 = nn.Linear(1000, 800)\n",
+        "        self.layerLandmark2 = nn.Linear(800, 600)\n",
+        "        self.layerLandmark3 = nn.Linear(600, 400)\n",
+        "        self.layerLandmark4 = nn.Linear(400, 200)\n",
+        "        self.layerLandmark5 = nn.Linear(200, 144)\n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        L1 = self.fc3(x)\n",
+        "        L1 = self.ReLU(L1)\n",
+        "\n",
+        "\n",
+        "        L2 = self.layerLandmark1(L1)\n",
+        "        L2 = self.ReLU(L2)\n",
+        "\n",
+        "        L3 = self.layerLandmark2(L2)\n",
+        "        L3 = self.ReLU(L3)\n",
+        "\n",
+        "        L4 = self.layerLandmark3(L3)\n",
+        "        L4 = self.ReLU(L4)\n",
+        "\n",
+        "        L5 = self.layerLandmark4(L4)\n",
+        "        L5 = self.ReLU(L5)\n",
+        "\n",
+        "        L6 = self.layerLandmark5(L5)\n",
+        "        outL = self.ReLU(L6)\n",
+        "\n",
+        "\n",
+        "        # B1 = self.fc_bn3(L1) \n",
+        "        T0 = self.fc4(L1) \n",
+        "        T0 = self.ReLU(T0)\n",
+        "        # T0 = self.fc_bn4(T0)\n",
+        "        T0 = T0.view(-1,256,14,14)\n",
+        "\n",
+        "\n",
+        "\n",
+        "        T1 = self.T1_(T0)\n",
+        "        T2 = self.T2_(T1)\n",
+        "        T3 = self.T3_(T2)\n",
+        "        T4 = self.T4_(T3)\n",
+        "\n",
+        "        outT = self.ConvLast(T4)\n",
+        "        if self.phase == \"train\":\n",
+        "            return outL,  outT\n",
+        "        elif self.phase == \"eval\":\n",
+        "            return outT\n",
+        "\n",
+        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/epoch_0_steps_4800.pth\", **kwargs):\n",
+        "    \"\"\"\n",
+        "    load imported model instance\n",
+        "    Args:\n",
+        "        weights_path (str): If set, loads model weights from the given path\n",
+        "    \"\"\"\n",
+        "    model = DECODER('eval')\n",
+        "    if weights_path:\n",
+        "        state_dict = torch.load(weights_path)[\"model_state_dict\"]\n",
+        "        model.load_state_dict(state_dict)\n",
+        "    return model"
       ],
       "execution_count": null,
       "outputs": []
@@ -417,9 +575,6 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "import torch.nn as nn\n",
-        "\n",
         "class SpeechEncoder(nn.Module):\n",
         "\n",
         "    def __init__(self):\n",
@@ -479,7 +634,18 @@
         "        out = self.fc2(out)\n",
         "\n",
         "        return out\n",
-        "\n"
+        "\n",
+        "def speech_encoder(weights_path=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/adam/adam_epoch_9.pth\", **kwargs):\n",
+        "    \"\"\"\n",
+        "    load imported model instance\n",
+        "    Args:\n",
+        "        weights_path (str): If set, loads model weights from the given path\n",
+        "    \"\"\"\n",
+        "    model = SpeechEncoder()\n",
+        "    if weights_path:\n",
+        "        state_dict = torch.load(weights_path)[\"model_state_dict\"]\n",
+        "        model.load_state_dict(state_dict)\n",
+        "    return model"
       ],
       "execution_count": null,
       "outputs": []
@@ -518,11 +684,6 @@
         "colab": {}
       },
       "source": [
-        "import torch\n",
-        "import torch.nn.functional as F\n",
-        "from typing import Optional, Callable\n",
-        "from tqdm.notebook import tqdm, trange\n",
-        "\n",
         "def _save_model(epoch, model, optimizer, output_dir_name=\"/content/drive/My Drive/Speech2Face/models/speech_encoder/\"):\n",
         "    torch.save({\n",
         "        'epoch': epoch,\n",
@@ -732,6 +893,69 @@
         "\n",
         "model(input.type(torch.float32)).shape\n",
         "summary(model, (2,257,601))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kBS5g-ckzeV9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Quick testing -- models creation\n",
+        "\n",
+        "enc = speech_encoder()\n",
+        "dec = decoder()\n",
+        "dec_w = decoder_warping()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hLpG4SnDzzhh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Quick testing -- actual test\n",
+        "\n",
+        "enc.eval()\n",
+        "dec.eval()\n",
+        "#dec_w.eval() # Is it needed??\n",
+        "\n",
+        "test_wav_path = \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10270/5r0dWxy17C8/00001.wav\"\n",
+        "test_wav = load_wav(test_wav_path)\n",
+        "test_wav = torch.tensor(test_wav).reshape(2,257,601).float().unsqueeze(0)\n",
+        "\n",
+        "out = enc(test_wav)\n",
+        "decoded = dec(out)\n",
+        "decoded_w = dec_w(out)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ld7jvncs3IJE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Quick testing -- showing output\n",
+        "\n",
+        "#1 - Decoder w/ warping\n",
+        "o_img_w = cv2.cvtColor(np.einsum('abc->bca',decoded_w[0].detach().numpy()*255), cv2.COLOR_BGR2RGB)\n",
+        "cv2_imshow(o_img_w)\n",
+        "\n",
+        "#2 - Decoder w/o warping\n",
+        "o_img = cv2.cvtColor(np.einsum('abc->bca',decoded[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
+        "cv2_imshow(o_img)"
       ],
       "execution_count": null,
       "outputs": []
