Decoders first layer extraction

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -299,7 +299,7 @@
         "\n",
         "        return x\n",
         "\n",
-        "def decoder(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder/epoch_3_steps_12800.pth\", **kwargs):\n",
+        "def decoder(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder/epoch_3_steps_12800.pth\", fc3_only=False, **kwargs):\n",
         "    \"\"\"\n",
         "    load imported model instance\n",
         "    Args:\n",
@@ -309,7 +309,17 @@
         "    if weights_path:\n",
         "        state_dict = torch.load(weights_path)[\"model_state_dict\"]\n",
         "        model.load_state_dict(state_dict)\n",
-        "    return model"
+        "        \n",
+        "        if fc3_only:\n",
+        "          fc3_layer = nn.Sequential(list(model.children())[0])\n",
+        "          for param in fc3_layer.parameters():\n",
+        "            param.requires_grad = False\n",
+        "          #print(fc3_layer)\n",
+        "          return fc3_layer        \n",
+        "\n",
+        "    return model\n",
+        "\n",
+        "# dec_fc3 = decoder(fc3_only=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -403,7 +413,7 @@
         "        elif self.phase == \"eval\":\n",
         "            return outT\n",
         "\n",
-        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/epoch_0_steps_4800.pth\", **kwargs):\n",
+        "def decoder_warping(weights_path=\"/content/drive/My Drive/Speech2Face/models/face_decoder_warping/epoch_0_steps_4800.pth\", fc3_only=False, **kwargs):\n",
         "    \"\"\"\n",
         "    load imported model instance\n",
         "    Args:\n",
@@ -413,7 +423,17 @@
         "    if weights_path:\n",
         "        state_dict = torch.load(weights_path)[\"model_state_dict\"]\n",
         "        model.load_state_dict(state_dict)\n",
-        "    return model"
+        "\n",
+        "        if fc3_only:\n",
+        "          fc3_layer = nn.Sequential(list(model.children())[0])\n",
+        "          for param in fc3_layer.parameters():\n",
+        "            param.requires_grad = False\n",
+        "          #print(fc3_layer)\n",
+        "          return fc3_layer\n",
+        "\n",
+        "    return model\n",
+        "\n",
+        "# dec_fc3 = decoder_warping(fc3_only=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -928,13 +948,27 @@
         "dec.eval()\n",
         "#dec_w.eval() # Is it needed??\n",
         "\n",
-        "test_wav_path = \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10270/5r0dWxy17C8/00001.wav\"\n",
+        "test_wav_path = \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10279/3qAxPgeIvCQ/00001.wav\"\n",
         "test_wav = load_wav(test_wav_path)\n",
         "test_wav = torch.tensor(test_wav).reshape(2,257,601).float().unsqueeze(0)\n",
         "\n",
+        "test_wav_path2 = \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10277/0rpfN7wThsg/00001.wav\"\n",
+        "test_wav2 = load_wav(test_wav_path2)\n",
+        "test_wav2 = torch.tensor(test_wav2).reshape(2,257,601).float().unsqueeze(0)\n",
+        "\n",
+        "print(torch.equal(test_wav, test_wav2))\n",
+        "\n",
+        "#print(test_wav, test_wav2)\n",
+        "\n",
+        "\n",
         "out = enc(test_wav)\n",
         "decoded = dec(out)\n",
-        "decoded_w = dec_w(out)"
+        "decoded_w = dec_w(out)\n",
+        "\n",
+        "\n",
+        "out2 = enc(test_wav2)\n",
+        "decoded2 = dec(out2)\n",
+        "decoded_w2 = dec_w(out2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -953,9 +987,15 @@
         "o_img_w = cv2.cvtColor(np.einsum('abc->bca',decoded_w[0].detach().numpy()*255), cv2.COLOR_BGR2RGB)\n",
         "cv2_imshow(o_img_w)\n",
         "\n",
+        "o_img_w2 = cv2.cvtColor(np.einsum('abc->bca',decoded_w2[0].detach().numpy()*255), cv2.COLOR_BGR2RGB)\n",
+        "cv2_imshow(o_img_w2)\n",
+        "\n",
         "#2 - Decoder w/o warping\n",
         "o_img = cv2.cvtColor(np.einsum('abc->bca',decoded[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
-        "cv2_imshow(o_img)"
+        "cv2_imshow(o_img)\n",
+        "\n",
+        "o_img2 = cv2.cvtColor(np.einsum('abc->bca',decoded2[0].detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
+        "cv2_imshow(o_img2)"
       ],
       "execution_count": null,
       "outputs": []
