Creato con Colaboratory

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -6,7 +6,7 @@
       "name": "face_processing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPf71yu1dThC1Os5wkXPngp",
+      "authorship_tag": "ABX9TyOyfAo4YaxgBkGRf4uMVv+O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -301,7 +301,7 @@
         "    \n",
         "      index += 1\n",
         "    \n",
-        "np.save(\"Face_Feature/facefeature.npy\",face_features[:index])\n",
+        "np.save(\"Face_Feature/facefeature.npy\",face_feature[:index])\n",
         "print(index)"
       ],
       "execution_count": null,
@@ -315,7 +315,21 @@
         "colab": {}
       },
       "source": [
-        "np.save(\"Face_Feature/facefeature.npy\",face_features[:index])"
+        "np.save(\"Face_Feature/facefeature.npy\",face_feature[:index])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-JT3mR-raCFz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "prova = np.load(\"Face_Feature/facefeature.npy\")\n",
+        "prova.shape"
       ],
       "execution_count": null,
       "outputs": []
