Creato con Colaboratory

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -6,7 +6,7 @@
       "name": "face_processing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOyfAo4YaxgBkGRf4uMVv+O",
+      "authorship_tag": "ABX9TyM6ilfp3vGy4qaehHiRxPwN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -222,12 +222,27 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "omXh_0lnavT6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        "! tar zxvf zippedFaces.tar.gz"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MMEt6gSvOvSr",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "datasetPath = '/content/drive/My Drive/Speech2Face/vox1_dataset/unzippedFaces'\n",
+        "! rm zippedFaces.tar.gz\n",
+        "datasetPath = 'unzippedFaces'\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "data_points = os.listdir(datasetPath) ## GETTING DATA POINTS THAT IS NAME OF CELEBRTIES."
       ],
@@ -315,7 +330,8 @@
         "colab": {}
       },
       "source": [
-        "np.save(\"Face_Feature/facefeature.npy\",face_feature[:index])"
+        " # np.save(\"Face_Feature/facefeature.npy\",face_feature[:index  ])\n",
+        " # print(face_feature[3752].sum())"
       ],
       "execution_count": null,
       "outputs": []
@@ -328,8 +344,11 @@
         "colab": {}
       },
       "source": [
-        "prova = np.load(\"Face_Feature/facefeature.npy\")\n",
-        "prova.shape"
+        "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
+        "# print(prova[3752].sum())\n",
+        "\n",
+        "# ! zip -r face_features.zip Face_Feature/ \n",
+        "! cp face_features.zip /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
