Creato con Colaboratory

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -6,7 +6,7 @@
       "name": "face_processing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyM6ilfp3vGy4qaehHiRxPwN",
+      "authorship_tag": "ABX9TyPt2jJLIhMnlZw0dMdeeA2Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,8 @@
       },
       "source": [
         "! pip3 install face_recognition\n",
+        "! pip install deepface\n",
+        "\n",
         "\n",
         "import glob\n",
         "\n",
@@ -59,7 +61,8 @@
         "\n",
         "from tqdm import tqdm\n",
         "from google.colab.patches import cv2_imshow\n",
-        "import cv2"
+        "import cv2\n",
+        "from deepface import DeepFace"
       ],
       "execution_count": null,
       "outputs": []
@@ -227,8 +230,8 @@
         "colab": {}
       },
       "source": [
-        "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
-        "! tar zxvf zippedFaces.tar.gz"
+        "# ! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        "# ! tar zxvf zippedFaces.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
@@ -241,7 +244,7 @@
         "colab": {}
       },
       "source": [
-        "! rm zippedFaces.tar.gz\n",
+        "# ! rm zippedFaces.tar.gz\n",
         "datasetPath = 'unzippedFaces'\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "data_points = os.listdir(datasetPath) ## GETTING DATA POINTS THAT IS NAME OF CELEBRTIES."
@@ -285,7 +288,7 @@
         "from os.path import join\n",
         "from os import listdir\n",
         "import random\n",
-        "no_of_record_per_image = 3  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
+        "no_of_record_per_image = 10  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
         "face_feature = np.zeros((len(data_points)*no_of_record_per_image,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
         "if not(\"Face_Feature\" in os.listdir()): ### MAKING DIR\n",
         "    os.mkdir(\"Face_Feature\")\n",
@@ -301,10 +304,18 @@
         "      except:\n",
         "        continue\n",
         "\n",
-        "      pos = face_locations(np.array(img), model='cnn')\n",
+        "      try:\n",
+        "        out = DeepFace.analyze(image_path, actions=['emotion'])\n",
+        "      except:\n",
+        "        continue\n",
+        "      \n",
+        "      if (out['dominant_emotion'] != 'neutral'):\n",
+        "        continue\n",
         "\n",
-        "      if len(pos) == 0:\n",
-        "        continue   \n",
+        "      # pos = face_locations(np.array(img), model='cnn')\n",
+        "\n",
+        "      # if len(pos) == 0:\n",
+        "      #  continue   \n",
         "\n",
         "      encoding = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device))\n",
         "      face_feature[index] = encoding.cpu().detach().numpy()\n",
@@ -347,8 +358,9 @@
         "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
         "# print(prova[3752].sum())\n",
         "\n",
-        "# ! zip -r face_features.zip Face_Feature/ \n",
-        "! cp face_features.zip /content/drive/My\\ Drive/Speech2Face/"
+        "! zip -r face_features.zip Face_Feature/ \n",
+        "! cp face_features_neutral.zip /content/drive/My\\ Drive/Speech2Face/\n",
+        "! rm -r Face_Feature/"
       ],
       "execution_count": null,
       "outputs": []
