Creato con Colaboratory

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -6,7 +6,7 @@
       "name": "face_processing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPt2jJLIhMnlZw0dMdeeA2Q",
+      "authorship_tag": "ABX9TyOj/YgNv+86e4nziDPH3KFV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,8 @@
         "from tqdm import tqdm\n",
         "from google.colab.patches import cv2_imshow\n",
         "import cv2\n",
-        "from deepface import DeepFace"
+        "from deepface import DeepFace\n",
+        "import sys"
       ],
       "execution_count": null,
       "outputs": []
@@ -230,8 +231,8 @@
         "colab": {}
       },
       "source": [
-        "# ! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
-        "# ! tar zxvf zippedFaces.tar.gz"
+        "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        "! tar zxvf zippedFaces.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
@@ -244,7 +245,7 @@
         "colab": {}
       },
       "source": [
-        "# ! rm zippedFaces.tar.gz\n",
+        "! rm zippedFaces.tar.gz\n",
         "datasetPath = 'unzippedFaces'\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "data_points = os.listdir(datasetPath) ## GETTING DATA POINTS THAT IS NAME OF CELEBRTIES."
@@ -280,6 +281,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "8MPKETMan0Uy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Disable\n",
+        "def blockPrint():\n",
+        "    sys.stdout = open(os.devnull, 'w')\n",
+        "\n",
+        "# Restore\n",
+        "def enablePrint():\n",
+        "    sys.stdout = sys.__stdout__"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "JIytMAqvPKJT",
         "colab_type": "code",
         "colab": {}
@@ -305,7 +325,9 @@
         "        continue\n",
         "\n",
         "      try:\n",
+        "        blockPrint()\n",
         "        out = DeepFace.analyze(image_path, actions=['emotion'])\n",
+        "        enablePrint()\n",
         "      except:\n",
         "        continue\n",
         "      \n",
@@ -326,6 +348,7 @@
         "      img.save(path_save)\n",
         "    \n",
         "      index += 1\n",
+        "      \n",
         "    \n",
         "np.save(\"Face_Feature/facefeature.npy\",face_feature[:index])\n",
         "print(index)"
