Creato con Colaboratory

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -6,7 +6,7 @@
       "name": "face_processing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOj/YgNv+86e4nziDPH3KFV",
+      "authorship_tag": "ABX9TyPoegHwDoHHKLAtOdEgXeyf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -231,8 +231,8 @@
         "colab": {}
       },
       "source": [
-        "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
-        "! tar zxvf zippedFaces.tar.gz"
+        " ! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        " ! tar zxvf zippedFaces.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
@@ -245,7 +245,7 @@
         "colab": {}
       },
       "source": [
-        "! rm zippedFaces.tar.gz\n",
+        " ! rm zippedFaces.tar.gz\n",
         "datasetPath = 'unzippedFaces'\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "data_points = os.listdir(datasetPath) ## GETTING DATA POINTS THAT IS NAME OF CELEBRTIES."
@@ -286,13 +286,16 @@
         "colab": {}
       },
       "source": [
-        "# Disable\n",
-        "def blockPrint():\n",
-        "    sys.stdout = open(os.devnull, 'w')\n",
+        "import os, sys\n",
         "\n",
-        "# Restore\n",
-        "def enablePrint():\n",
-        "    sys.stdout = sys.__stdout__"
+        "class HiddenPrints:\n",
+        "    def __enter__(self):\n",
+        "        self._original_stdout = sys.stdout\n",
+        "        sys.stdout = open(os.devnull, 'w')\n",
+        "\n",
+        "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
+        "        sys.stdout.close()\n",
+        "        sys.stdout = self._original_stdout"
       ],
       "execution_count": null,
       "outputs": []
@@ -308,12 +311,16 @@
         "from os.path import join\n",
         "from os import listdir\n",
         "import random\n",
-        "no_of_record_per_image = 10  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
+        "from IPython.utils import io\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "no_of_record_per_image = 3  ## NUMBER OF TIMES EVERY CELEBRITIES (DIFFERENT) IMAGES IS TO BE STORED\n",
         "face_feature = np.zeros((len(data_points)*no_of_record_per_image,4096)) ### ARRAY THAT WILL STORE THE FACE FEATURE\n",
         "if not(\"Face_Feature\" in os.listdir()): ### MAKING DIR\n",
         "    os.mkdir(\"Face_Feature\")\n",
         "    os.mkdir(\"Face_Feature/Faces\")\n",
         "index = 0\n",
+        "tf.compat.v1.logging.set_verbosity(tf.compat.v1.logging.ERROR)\n",
         "### EXTRACTING FACE FEATURE.\n",
         "for i in tqdm(range(len(data_points))):\n",
         "    for j in range(no_of_record_per_image):\n",
@@ -325,9 +332,9 @@
         "        continue\n",
         "\n",
         "      try:\n",
-        "        blockPrint()\n",
-        "        out = DeepFace.analyze(image_path, actions=['emotion'])\n",
-        "        enablePrint()\n",
+        "          with io.capture_output() as captured:\n",
+        "            out = DeepFace.analyze(image_path, actions=['emotion'])\n",
+        "        \n",
         "      except:\n",
         "        continue\n",
         "      \n",
@@ -381,7 +388,7 @@
         "# prova = np.load(\"Face_Feature/facefeature.npy\")\n",
         "# print(prova[3752].sum())\n",
         "\n",
-        "! zip -r face_features.zip Face_Feature/ \n",
+        "! zip -r face_features_neutral.zip Face_Feature/ \n",
         "! cp face_features_neutral.zip /content/drive/My\\ Drive/Speech2Face/\n",
         "! rm -r Face_Feature/"
       ],
