Fixes, save after full run

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -6,7 +6,6 @@
       "name": "face_processing.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPoegHwDoHHKLAtOdEgXeyf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -245,7 +244,7 @@
         "colab": {}
       },
       "source": [
-        " ! rm zippedFaces.tar.gz\n",
+        "! rm zippedFaces.tar.gz\n",
         "datasetPath = 'unzippedFaces'\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "data_points = os.listdir(datasetPath) ## GETTING DATA POINTS THAT IS NAME OF CELEBRTIES."
@@ -263,7 +262,9 @@
       "source": [
         "device = 'cuda'\n",
         "face_encoder_path = join(base_dir, \"Pretrained\", \"vgg_face_dag.pth\")\n",
-        "face_encoder_model = vgg_face_dag(face_encoder_path).to(device)\n",
+        "face_encoder_model = vgg_face_dag(face_encoder_path)\n",
+        "face_encoder_model.eval()\n",
+        "face_encoder_model.to(device)\n",
         "\n",
         "color_mean, color_std = face_encoder_model.meta[\"mean\"], face_encoder_model.meta[\"std\"]\n",
         "color_mean = [tmp / 255.0 for tmp in color_mean]\n",
@@ -347,7 +348,9 @@
         "      #  continue   \n",
         "\n",
         "      encoding = face_encoder_model(transform_fe(img).unsqueeze_(0).to(device))\n",
-        "      face_feature[index] = encoding.cpu().detach().numpy()\n",
+        "      # face_feature[index] = encoding.cpu().detach().numpy()\n",
+        "      face_feature[index,:] = encoding.cpu().detach().numpy()\n",
+        "\n",
         "      # print(face_feature[index].sum())\n",
         "      filename = data_points[i] + \"_\"  + str(j) + \".jpg\"\n",
         "      path_save = join(\"Face_Feature/Faces\", filename)\n",
@@ -372,7 +375,24 @@
       },
       "source": [
         " # np.save(\"Face_Feature/facefeature.npy\",face_feature[:index  ])\n",
-        " # print(face_feature[3752].sum())"
+        " print(face_feature[1].sum())\n",
+        " print(face_feature.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h8nWb1LMI5tL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Save as in the repo\n",
+        "\n",
+        "np.save(\"facefeature_save2.npy\",face_feature)\n",
+        "!cp facefeature_save2.npy /content/drive/My\\ Drive/Speech2Face/"
       ],
       "execution_count": null,
       "outputs": []
