Creato con Colaboratory

--- a/face_processing.ipynb
+++ b/face_processing.ipynb
@@ -33,8 +33,10 @@
         "colab": {}
       },
       "source": [
+        "! pip install openface\n",
         "! pip3 install face_recognition\n",
         "! pip install deepface\n",
+        "\n",
         "\n",
         "\n",
         "import glob\n",
@@ -297,6 +299,75 @@
         "    def __exit__(self, exc_type, exc_val, exc_tb):\n",
         "        sys.stdout.close()\n",
         "        sys.stdout = self._original_stdout"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lpMS9Xcps3GQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# ! git clone https://github.com/OverEuro/deep-head-pose-lite.git\n",
+        "# ! mv deep-head-pose-lite dhpl\n",
+        "from dhpl import stable_hopenetlite\n",
+        "pos_net = stable_hopenetlite.shufflenet_v2_x1_0()\n",
+        "saved_state_dict = torch.load('dhpl/model/shuff_epoch_120.pkl', map_location=\"cpu\")\n",
+        "pos_net.load_state_dict(saved_state_dict, strict=False)\n",
+        "pos_net.eval()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pyRA6YEKvJyt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "img = Image.open('/content/unzippedFaces/Abigail_Spencer/1.6/ZwprcvqTH3w/0001700.jpg')\n",
+        "img"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qYpu79SEvl70",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def softmax_temperature(tensor, temperature):\n",
+        "    result = torch.exp(tensor / temperature)\n",
+        "    result = torch.div(result, torch.sum(result, 1).unsqueeze(1).expand_as(result))\n",
+        "    return result\n",
+        "\n",
+        "transformations = transforms.Compose([transforms.Scale(224),\n",
+        "    transforms.CenterCrop(224), transforms.ToTensor(),\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
+        "input = transformations(img)\n",
+        "yaw, pitch, roll = pos_net(input.unsqueeze(0))\n",
+        "idx_tensor = torch.arange(66,dtype=torch.float)\n",
+        "# _, yaw_bpred = torch.max(yaw.data, 1)\n",
+        "# _, pitch_bpred = torch.max(pitch.data, 1)\n",
+        "# _, roll_bpred = torch.max(roll.data, 1)\n",
+        "# Continuous predictions\n",
+        "yaw_predicted = softmax_temperature(yaw.data, 1)\n",
+        "pitch_predicted = softmax_temperature(pitch.data, 1)\n",
+        "roll_predicted = softmax_temperature(roll.data, 1)\n",
+        "yaw_predicted = torch.sum(yaw_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "pitch_predicted = torch.sum(pitch_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "roll_predicted = torch.sum(roll_predicted * idx_tensor, 1).cpu() * 3 - 99\n",
+        "\n",
+        "\n",
+        "print(yaw_predicted, pitch_predicted, roll_predicted)"
       ],
       "execution_count": null,
       "outputs": []
